[gd_scene load_steps=2 format=3 uid="uid://c8y2q4x501j3k"]

[ext_resource type="Script" uid="uid://cesw5s2vct5l5" path="res://menu/ItemDrop.gd" id="1_k2l3m"]

[node name="ItemDrop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k2l3m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="Panel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 2
text = "Item Drop!"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Panel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="CurrentPanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/CurrentPanel"]
layout_mode = 2
text = "Atual"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/HBoxContainer/CurrentPanel"]
layout_mode = 2
size_flags_vertical = 3
text = "Stats..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="NewPanel" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/NewPanel"]
layout_mode = 2
text = "Novo"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/HBoxContainer/NewPanel"]
layout_mode = 2
size_flags_vertical = 3
text = "Stats..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 2
alignment = 1

[node name="EquipButton" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
text = "Equipar"

[node name="DiscardButton" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
text = "Descartar"
